@@ -1,8 +1,13 @@
+2009-03-05  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c: Fix assignment of fill patterns to plot boxes and key
+	for columnstacked histograms.  Bug #2664732
+
 2009-03-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (find_maxl_keys do_plot): The first entry in a list of
 	labels is a placeholder for style information.  Do not reserve space for
-	this entry in the key of a columnstacked histogram plot.
+	this entry in the key of a columnstacked histogram plot.  Bug #2664723
 
 2009-03-02  Ethan A Merritt  <merritt@u.washington.edu>
 
